[package]
name = "icydb-testing-integration"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = "Integration tests for IcyDB test canisters"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
blake3 = { workspace = true }
candid = { workspace = true }
ic-testkit = { workspace = true }
icydb = { workspace = true, features = ["diagnostics", "sql", "sql-explain"] }
icydb-testing-sqlite-reference = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
