[package]
name = "icydb-testing-integration"
autotests = false
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = "Integration tests for IcyDB test canisters"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
blake3 = { workspace = true }
candid = { workspace = true }
ic-testkit = { workspace = true }
icydb = { workspace = true, features = ["diagnostics", "sql", "sql-explain"] }
icydb-testing-sql-generator = { workspace = true }
icydb-testing-sqlite-reference = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true

[[test]]
name = "fluent_perf_audit"
path = "tests/fluent_perf_audit.rs"

[[test]]
name = "pk_canonicalization_focused_artifact"
path = "tests/pk_canonicalization_focused_artifact.rs"

[[test]]
name = "sql_canister"
path = "tests/sql_canister.rs"

[[test]]
name = "sql_correctness"
path = "tests/sql_correctness.rs"

[[test]]
name = "sql_perf_audit"
path = "tests/sql_perf_audit.rs"

[[test]]
name = "sql_perf_matrix_audit"
path = "tests/sql_perf_matrix_audit.rs"
