[package]
name = "icydb-testing-integration"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = "Pocket-IC integration tests for IcyDB test canisters"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
candid = { workspace = true }
icydb = { workspace = true }
pocket-ic = "12.0.0"
serde = { workspace = true }

[lints]
workspace = true
