[package]
name = "icydb-testing-integration"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
license = { workspace = true }
description = "canic-testkit-backed PocketIC integration tests for IcyDB test canisters"
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
candid = { workspace = true }
canic-testkit = { workspace = true }
icydb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
