[package]
name = "icydb-testing-sql-generator"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
publish = false
description = "Typed deterministic SQL correctness generator for IcyDB tests"

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }

[lints]
workspace = true
